# setup_umbrella

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mktopol  pyproject.toml  setupUmbrella
setup_umbrella/: mktopol.py  patchUmbrella  setupUmbrella  setupUmbrella.py
tests/: test_setup_umbrella.py
tests/test_data/: bad.mdp  index.ndx  sample.tpr  sample.xtc  topol.top  working.mdp
tests/test_data/gromos53a6_atb.ff/: README.md  aminoacids.hdb  aminoacids.rtp  atomtypes.atp  ffnonbonded.itp
tests/test_data/itp/: 1dnl.itp  1dnl.posre.itp  dcf2.itp  dcf2.posre.itp  so42.itp  tp1.itp  tp1.posre.itp
tests/test_data/test_coords/: #dist174.tpr.1#  #dist174.tpr.2#  #dist174.tpr.3#  conf174.gro  dist174.tpr  mdout174.mdp
